syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
option go_package = "grpc/user;userpb";

message CreateRequest {
  string user_name = 1;
  string password = 2;
}

message CreateResponse {
  uint64 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  optional google.protobuf.Timestamp deleted_at = 4;
  string user_name = 5;
  string password = 6;
}

service UserService { rpc Create(CreateRequest) returns (CreateResponse); }